# DemoOpenGL

./: CMakeLists.txt  README.md
includes/glad/: glad.h
includes/mylib/: camera.h  mesh.h  model.h  shader_s.h
libs/: glfw3.lib
shaders/: shader.fs  shader.vs  shader_2.fs  shader_2.vs  shader_2_light.fs  shader_2_obj.fs  shader_2_obj.vs  shader_3_obj.fs  shader_3_obj_1.fs  shader_3_obj_2.fs  shader_4_buffer_1.vs  shader_4_obj.fs  shader_4_refract.fs
src/: GameMain.cpp  glad.c  shader_s.h
src/1.start_demo/: DemoMain.cpp  DemoOpenGL.cpp  DemoOpenGL.h
src/2.light_demo/: LightMain.cpp
src/3.model_demo/: ModelMain.cpp
src/4.advanced_OpenGL/: AdvancedMain.cpp
src/4_2.blend_demo/: BlendMain.cpp
src/4_3.buffer_demo/: FrameBufferMain.cpp
src/4_4.sky_box/: SkyBoxMain.cpp
